Added labels to object form, simplified recipes.js

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,11 @@
   },
   "rules": {
     "semi": 1,
-    "indent": ["warn", 2],
-    "no-console": "warn"
+    "indent": [
+      "warn",
+      2
+    ],
+    "no-console": "warn",
+    "no-unused-vars": "warn"
   }
 }
