--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "3.11.3"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "img-loader": "^4.0.0"
   }
 }
